--- a/fundamentals/section-02-html-and-css/day-03-selectors-and-positioning/exercise-04/style.css
+++ b/fundamentals/section-02-html-and-css/day-03-selectors-and-positioning/exercise-04/style.css
@@ -1,29 +1,69 @@
-.caixa {
-  color: white;
-  display: inline-block;
-  line-height: 50px;
+body{
+    background-color: #F4F7F4;
+}
+
+h1,h2,h3{
+    color:#4E8F4A ;
+}
+
+
+.technology{
+background-color:  #4E8F4A;
+color: white;
+
+width: 80%;
+height: 200px ;
+overflow: auto;
+text-align: center;
+margin: auto;
+
+}
+
+.technology h3{
+    color: white;
+}
+
+.technology ul,
+.technology ol{  
   text-align: center;
-  vertical-align: top;
+  list-style-position: inside;
+  padding: 0
 }
 
-.width-and-height {
-  height: 50px;
-  width: 50px;
+div, p, ul, ol {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
-/* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-.padding {
-    padding: 20px; ;
-
+h1,h2,h3{
+   font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
 
-/* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-.margin {
-    margin: 30px ;
-
+#first-link{
+    color: #4E8F4A;
+    transition: 0.3s;
 }
 
-/* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-.border {
-  border: 5px solid black;
+#first-link:hover {
+  color: #2F5D2C;
 }
+
+li:hover{
+    background-color: #F4F7F4;
+    color: #2F5D2C;
+}
+
+.news a:hover{
+    background-color:#2F5D2C;
+    color: black;
+display: block;
+}
+
+.news a:active{
+    color: white;
+}
+
+.news a {
+  color: black;
+  text-decoration: none;
+}
+
